--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <head>
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
 <script type='text/javascript' src='http://code.jquery.com/jquery-1.5.js'></script>
 	<style>
@@ -32,27 +32,42 @@ a{
 }
 .name{
 	position:absolute;
-	left:200px;
+	left:180px;
 	top:5px;
-	font-size: 90;
-	font-family: 'Recursive', sans-serif;
+	font-size: 120;
+	font-family: 'Roboto', sans-serif;
 	color:#666666;
 }
 .nameSmall{
 	position:absolute;
-	left:520px;
-	top:65px;
+	left:490px;
+	top:90px;
 	font-size: 30;
-	font-family: 'Recursive', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color:#666666;
 }
 .teaser{
 	padding-left:3px;
 	padding-right:3px;
-	 font-size: 22px;
-	 font-family: 'Verdana', sans-serif;
-	 position:absolute;
+	font-size: 21px;
+	font-family: 'Verdana', sans-serif;
+	position:absolute;
 	left:5px;
+	top:128px;
+	color:#000000;
+	background-color: #ffffff;
+	opacity:0.5;
+	border-color: pink;
+	border-width: 1px;
+	border-style: outset;
+}
+.teaser2{
+	padding-left:3px;
+	padding-right:3px;
+	font-size: 21px;
+	font-family: 'Verdana', sans-serif;
+	position:absolute;
+	left:904px;
 	top:128px;
 	color:#000000;
 	background-color: #ffffff;
@@ -69,6 +84,9 @@ a{
 	left:25px;
 	top:230px;
 	color:white;
+	box-shadow: -20px 3px #333333;
+
+	opacity:0.7;
 }
 
 .contact{
@@ -76,15 +94,15 @@ a{
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
 	left:70px;
-	top:750px;
+	top:730px;
 	color:#DDDDDD;
 }
 .copy{
 	font-size: 13px;
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
-	left:70px;
-	top:800px;
+	left:5px;
+	top:770;
 	color:#DDDDDD;
 }
 
@@ -95,10 +113,11 @@ a{
 <body>
 		<span class ="logo"><img  src="img/crypto-currency.jpeg" width=160/></span>
 
-		<span class="name">FINTEX</span>
+		<span class="name">fintex</span>
 		<span class="nameSmall">.one</span>
 
-		<span class="teaser">Our expertice is building software solutions for decentralized finance also known as DeFi</span>
+		<span class="teaser">Our expertice is building software solutions for decentralized finance also known as </span>
+		<span class="teaser2">DeFi</span>
 		<span class="bulletpoints">
 			<ul>
 				<li>Blockchain</li>
