--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body{
 	padding:0;
 	margin:0;
-	  background-image: url("img/malta.jpeg");  
+	  background-image: url("img/DeFi.jpeg");  
 	  background-repeat: no-repeat;
 	  background-size:cover;
 	  background-blend-mode: lighten;
@@ -29,6 +29,7 @@ a{
 	position:absolute;
 	left:5px;
 	top:5px;
+	box-shadow: -20px 3px #333333;
 }
 .name{
 	position:absolute;
@@ -36,7 +37,7 @@ a{
 	top:5px;
 	font-size: 120;
 	font-family: 'Roboto', sans-serif;
-	color:#666666;
+	color:#ffffff;
 }
 .nameSmall{
 	position:absolute;
@@ -44,19 +45,19 @@ a{
 	top:90px;
 	font-size: 30;
 	font-family: 'Roboto', sans-serif;
-	color:#666666;
+	color:#ffffff;
 }
 .teaser{
 	padding-left:3px;
 	padding-right:3px;
-	font-size: 21px;
+	font-size: 23px;
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
-	left:5px;
+	left:190px;
 	top:128px;
-	color:#000000;
-	background-color: #ffffff;
-	opacity:0.5;
+	color:#FFFFFF;
+	background-color: #000000;
+	opacity:0.9;
 	border-color: pink;
 	border-width: 1px;
 	border-style: outset;
@@ -67,7 +68,7 @@ a{
 	font-size: 21px;
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
-	left:904px;
+	left:290px;
 	top:128px;
 	color:#000000;
 	background-color: #ffffff;
@@ -78,15 +79,17 @@ a{
 }
 
 .bulletpoints{
-	 font-size: 37px;
-	 font-family: 'Verdana', sans-serif;
-	 position:absolute;
+	padding:5px;
+	font-size: 37px;
+	font-family: 'Verdana', sans-serif;
+		position:absolute;
 	left:25px;
-	top:230px;
+	top:180px;
 	color:white;
+	background-color: black;
 	box-shadow: -20px 3px #333333;
 
-	opacity:0.7;
+	opacity:0.8;
 }
 
 .contact{
@@ -94,7 +97,7 @@ a{
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
 	left:70px;
-	top:730px;
+	top:770px;
 	color:#DDDDDD;
 }
 .copy{
@@ -102,22 +105,21 @@ a{
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
 	left:5px;
-	top:770;
+	top:810;
 	color:#DDDDDD;
 }
 
 	</style>
-
 </head>
 
 <body>
-		<span class ="logo"><img  src="img/crypto-currency.jpeg" width=160/></span>
+		<span class ="logo"><img  src="img/logo.png" width=160/></span>
 
 		<span class="name">fintex</span>
 		<span class="nameSmall">.one</span>
 
-		<span class="teaser">Our expertice is building software solutions for decentralized finance also known as </span>
-		<span class="teaser2">DeFi</span>
+		<span class="teaser">Our expertice is building software solutions for decentralized finance based on Block Chains </span>
+		<!--<span class="teaser2">DeFi</span>//-->
 		<span class="bulletpoints">
 			<ul>
 				<li>Blockchain</li>
@@ -128,8 +130,9 @@ a{
 				<li>P2P</li>
 				<li>Cryptocurrency</li>
 				<li>Distributed Ledger</li>
-				<li>Blockchain-as-a-Service (BaaS) Azure - AWS - GCP</li>
-				<li>Securing highly distributed applications</li>
+				<li>Blockchain-as-a-Service (BaaS)&nbsp;</li>
+				<li>Azure - AWS - GCP</li>
+				<li>Securing DApps</li>
 			</ul>
 	    </span>
 		<span class="contact">Contact: <a href="mailto:info@fintex.one">info@fintex.one</a></span>
