--- a/index.html
+++ b/index.html
@@ -86,19 +86,21 @@ a{
 	left:25px;
 	top:180px;
 	color:white;
-	background-color: black;
-	box-shadow: -20px 3px #333333;
+	background-color: #554466;
+	box-shadow: -20px 3px #335577;
 
 	opacity:0.8;
 }
 
 .contact{
+	padding:5px;
 	font-size: 23px;
 	font-family: 'Verdana', sans-serif;
 	position:absolute;
 	left:70px;
 	top:770px;
 	color:#DDDDDD;
+	background-color: #333333;
 }
 .copy{
 	font-size: 13px;
